fixed the overlapping by making the height static

--- a/main.css
+++ b/main.css
@@ -92,6 +92,7 @@ html, body {
     border-radius: 25px;
     margin: 1% 1%;
     width: 400px;
+    height: 800px;
     text-align: left;
 }
 .page .page-content .team-profiles .profile .picture {
